# tinytensor

./: .gitignore  LICENSE  README.md  TODO.md  build.sh  compile.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py
tests/: bitwise_op.ipynb  tensor_test.ipynb  test_arithmetic.py  test_bitwise.py
tinytensor/: __init__.py  autograd.py  device.py  dtypes.py  helpers.py  shape.py  tensor.py  version.py
tinytensor/engine/: array.c  array.h  complex.c  complex.h  constants.c  constants.pyi  cpu.c  cpu.pyi  dtypes.h  fp.h  gpu_cuda.cu  gpu_cuda.pyi  ten.h  tensor.c  tensor.h  test  test.c  tt_memory.c  tt_memory.h
tinytensor/engine/cpu/: __init__.py  cpu.c  cpu.pyi  cpu_ops.c  cpu_ops.pyi  functional_cpu.c  functional_cpu.pyi  random.c  random.pyi
tinytensor/engine/cuda/: __init__.py  cuda.cu  cuda.pyi  cuda_ops.cu  cuda_ops.pyi  functional_cuda.cu  functional_cuda.pyi  gpu_cuda.cu  gpu_cuda.pyi  random.cu
tinytensor/nn/: __init__.py  functional.py
