[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinytensor"
version = "0.3.0"
description = "A lightweight tensor computation library"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Sahil Rajwar" }
]

license = "MIT"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://github.com/0xhilSa/tinytensor"
Source = "https://github.com/0xhilSa/tinytensor"
